chore: upgrade react&next

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^10.1.8",
     "lucide-react": "^0.555.0",
-    "next": "16.0.7",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "next": "^16.0.7",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.67.0",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
