--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "eslint-config-prettier": "^10.1.8",
     "lucide-react": "^0.555.0",
     "next": "^16.0.9",
+    "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-day-picker": "^9.12.0",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.67.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.13",
