fix: schedule type

--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.9.0",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
